--- a/scss/forms.scss
+++ b/scss/forms.scss
@@ -13,6 +13,7 @@
 		&.btn{
 			@include formControl(3em,7em, 0);
 			@include alert($success, #fff);
+			-webkit-appearance: none;
 		}
 	}
 
