--- a/scss/layouts.scss
+++ b/scss/layouts.scss
@@ -57,4 +57,5 @@
 	background-image:url('../img/james-monroe.jpg');
 	@include contentPage;
 	padding: 0;
+	color: #fff;
 }
